// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "backgroundColor": "#ecf0f3",
      "paddingBottom": 100,
    }
  }
  style={
    {
      "backgroundColor": "#ecf0f3",
      "display": "flex",
      "flexGrow": 1,
      "minHeight": "100%",
      "paddingHorizontal": 16,
      "paddingVertical": 64,
    }
  }
>
  <View>
    <Text
      style={
        {
          "fontSize": 18,
          "fontWeight": "500",
        }
      }
    >
      Hello
    </Text>
    <Text
      style={
        {
          "fontSize": 36,
          "marginTop": 8,
        }
      }
    >
      Saleh
    </Text>
    <Text
      style={
        {
          "fontWeight": "700",
          "marginTop": 40,
        }
      }
    >
      Nearby Chargers
    </Text>
    <Text
      style={
        {
          "color": "#616e76",
          "fontSize": 12,
        }
      }
    >
      Nearest charging stations within a radius of 50km 
    </Text>
    <Text
      style={
        {
          "color": "#616e76",
          "fontSize": 12,
        }
      }
    >
      Your Preference: CCS Type 2
    </Text>
    <View
      style={
        {
          "backgroundColor": "white",
          "borderColor": "#a3b8c5",
          "borderRadius": 10,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "column",
          "marginVertical": 16,
          "zIndex": 5,
        }
      }
    >
      <View
        style={
          {
            "borderBottomColor": "#b8bfc4",
            "borderBottomWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "height": 70,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "padding": 16,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 18,
                "fontWeight": "700",
              }
            }
          >
             
            5
            /
            5
             
          </Text>
          <Text>
             Available 
          </Text>
        </View>
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "flexGrow": 1,
              "padding": 16,
            }
          }
        >
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#383d3f",
                  "fontSize": 12,
                }
              }
            >
              Loughborough to...
               
            </Text>
          </View>
          <Text
            style={
              {
                "color": "#383d3f",
                "fontSize": 12,
              }
            }
          >
            LE11 EC3, UK
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#e6ebee",
              "borderBottomRightRadius": 0,
              "borderTopRightRadius": 10,
              "display": "flex",
              "flexDirection": "column",
              "overflow": "hidden",
              "padding": 16,
              "width": 80,
              "zIndex": 2,
            }
          }
        >
          <Text>
            780m
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "borderBottomColor": "#b8bfc4",
            "borderBottomWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "height": 70,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "padding": 16,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 18,
                "fontWeight": "700",
              }
            }
          >
             
            9
            /
            18
             
          </Text>
          <Text>
             Available 
          </Text>
        </View>
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "flexGrow": 1,
              "padding": 16,
            }
          }
        >
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#383d3f",
                  "fontSize": 12,
                }
              }
            >
              Paddington 36
               
            </Text>
          </View>
          <Text
            style={
              {
                "color": "#383d3f",
                "fontSize": 12,
              }
            }
          >
            W2 5TY, UK
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#e6ebee",
              "borderBottomRightRadius": 0,
              "borderTopRightRadius": 0,
              "display": "flex",
              "flexDirection": "column",
              "overflow": "hidden",
              "padding": 16,
              "width": 80,
              "zIndex": 2,
            }
          }
        >
          <Text>
            140m
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "borderBottomColor": "#b8bfc4",
            "borderBottomWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "height": 70,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "padding": 16,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 18,
                "fontWeight": "700",
              }
            }
          >
             
            3
            /
            10
             
          </Text>
          <Text>
             Available 
          </Text>
        </View>
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "flexGrow": 1,
              "padding": 16,
            }
          }
        >
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#383d3f",
                  "fontSize": 12,
                }
              }
            >
              London 2
               
            </Text>
          </View>
          <Text
            style={
              {
                "color": "#383d3f",
                "fontSize": 12,
              }
            }
          >
            W2 5TY, UK
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#e6ebee",
              "borderBottomRightRadius": 0,
              "borderTopRightRadius": 0,
              "display": "flex",
              "flexDirection": "column",
              "overflow": "hidden",
              "padding": 16,
              "width": 80,
              "zIndex": 2,
            }
          }
        >
          <Text>
            12km
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "borderBottomColor": "#b8bfc4",
            "borderBottomWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "height": 70,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "padding": 16,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 18,
                "fontWeight": "700",
              }
            }
          >
             
            4
            /
            10
             
          </Text>
          <Text>
             Available 
          </Text>
        </View>
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "flexGrow": 1,
              "padding": 16,
            }
          }
        >
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#383d3f",
                  "fontSize": 12,
                }
              }
            >
              London 4
               
            </Text>
          </View>
          <Text
            style={
              {
                "color": "#383d3f",
                "fontSize": 12,
              }
            }
          >
            W2 5TY, UK
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#e6ebee",
              "borderBottomRightRadius": 0,
              "borderTopRightRadius": 0,
              "display": "flex",
              "flexDirection": "column",
              "overflow": "hidden",
              "padding": 16,
              "width": 80,
              "zIndex": 2,
            }
          }
        >
          <Text>
            12km
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "borderBottomColor": "#b8bfc4",
            "borderBottomWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "height": 70,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "padding": 16,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 18,
                "fontWeight": "700",
              }
            }
          >
             
            5
            /
            10
             
          </Text>
          <Text>
             Available 
          </Text>
        </View>
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "flexGrow": 1,
              "padding": 16,
            }
          }
        >
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#383d3f",
                  "fontSize": 12,
                }
              }
            >
              London 5
               
            </Text>
          </View>
          <Text
            style={
              {
                "color": "#383d3f",
                "fontSize": 12,
              }
            }
          >
            W2 5TY, UK
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#e6ebee",
              "borderBottomRightRadius": 0,
              "borderTopRightRadius": 0,
              "display": "flex",
              "flexDirection": "column",
              "overflow": "hidden",
              "padding": 16,
              "width": 80,
              "zIndex": 2,
            }
          }
        >
          <Text>
            12km
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "borderBottomColor": "#b8bfc4",
            "borderBottomWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "height": 70,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "padding": 16,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 18,
                "fontWeight": "700",
              }
            }
          >
             
            8
            /
            10
             
          </Text>
          <Text>
             Available 
          </Text>
        </View>
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "flexGrow": 1,
              "padding": 16,
            }
          }
        >
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#383d3f",
                  "fontSize": 12,
                }
              }
            >
              London 6
               
            </Text>
          </View>
          <Text
            style={
              {
                "color": "#383d3f",
                "fontSize": 12,
              }
            }
          >
            W2 5TY, UK
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#e6ebee",
              "borderBottomRightRadius": 0,
              "borderTopRightRadius": 0,
              "display": "flex",
              "flexDirection": "column",
              "overflow": "hidden",
              "padding": 16,
              "width": 80,
              "zIndex": 2,
            }
          }
        >
          <Text>
            12km
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "borderBottomColor": "#b8bfc4",
            "borderBottomWidth": 0,
            "display": "flex",
            "flexDirection": "row",
            "height": 70,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "padding": 16,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 18,
                "fontWeight": "700",
              }
            }
          >
             
            1
            /
            10
             
          </Text>
          <Text>
             Available 
          </Text>
        </View>
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "flexGrow": 1,
              "padding": 16,
            }
          }
        >
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#383d3f",
                  "fontSize": 12,
                }
              }
            >
              London 8
               
            </Text>
          </View>
          <Text
            style={
              {
                "color": "#383d3f",
                "fontSize": 12,
              }
            }
          >
            W2 5TY, UK
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#e6ebee",
              "borderBottomRightRadius": 10,
              "borderTopRightRadius": 0,
              "display": "flex",
              "flexDirection": "column",
              "overflow": "hidden",
              "padding": 16,
              "width": 80,
              "zIndex": 2,
            }
          }
        >
          <Text>
            12km
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#002899",
          "borderRadius": 20,
          "borderWidth": 1,
          "paddingVertical": 8,
        }
      }
      testID="show"
    >
      <Text
        style={
          {
            "textAlign": "center",
          }
        }
      >
        Show less
      </Text>
    </View>
  </View>
</RCTScrollView>
`;

exports[`renders correctly 2`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "backgroundColor": "#ecf0f3",
      "paddingBottom": 100,
    }
  }
  style={
    {
      "backgroundColor": "#ecf0f3",
      "display": "flex",
      "flexGrow": 1,
      "minHeight": "100%",
      "paddingHorizontal": 16,
      "paddingVertical": 64,
    }
  }
>
  <View>
    <Text
      style={
        {
          "fontSize": 18,
          "fontWeight": "500",
        }
      }
    >
      Hello
    </Text>
    <Text
      style={
        {
          "fontSize": 36,
          "marginTop": 8,
        }
      }
    >
      Saleh
    </Text>
    <Text
      style={
        {
          "fontWeight": "700",
          "marginTop": 40,
        }
      }
    >
      Nearby Chargers
    </Text>
    <Text
      style={
        {
          "color": "#616e76",
          "fontSize": 12,
        }
      }
    >
      Nearest charging stations within a radius of 50km 
    </Text>
    <Text
      style={
        {
          "color": "#616e76",
          "fontSize": 12,
        }
      }
    >
      Your Preference: CCS Type 2
    </Text>
    <View
      style={
        {
          "backgroundColor": "white",
          "borderColor": "#a3b8c5",
          "borderRadius": 10,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "column",
          "marginVertical": 16,
          "zIndex": 5,
        }
      }
    >
      <View
        style={
          {
            "borderBottomColor": "#b8bfc4",
            "borderBottomWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "height": 70,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "padding": 16,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 18,
                "fontWeight": "700",
              }
            }
          >
             
            5
            /
            5
             
          </Text>
          <Text>
             Available 
          </Text>
        </View>
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "flexGrow": 1,
              "padding": 16,
            }
          }
        >
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#383d3f",
                  "fontSize": 12,
                }
              }
            >
              Loughborough to...
               
            </Text>
          </View>
          <Text
            style={
              {
                "color": "#383d3f",
                "fontSize": 12,
              }
            }
          >
            LE11 EC3, UK
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#e6ebee",
              "borderBottomRightRadius": 0,
              "borderTopRightRadius": 10,
              "display": "flex",
              "flexDirection": "column",
              "overflow": "hidden",
              "padding": 16,
              "width": 80,
              "zIndex": 2,
            }
          }
        >
          <Text>
            780m
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "borderBottomColor": "#b8bfc4",
            "borderBottomWidth": 1,
            "display": "flex",
            "flexDirection": "row",
            "height": 70,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "padding": 16,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 18,
                "fontWeight": "700",
              }
            }
          >
             
            9
            /
            18
             
          </Text>
          <Text>
             Available 
          </Text>
        </View>
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "flexGrow": 1,
              "padding": 16,
            }
          }
        >
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#383d3f",
                  "fontSize": 12,
                }
              }
            >
              Paddington 36
               
            </Text>
          </View>
          <Text
            style={
              {
                "color": "#383d3f",
                "fontSize": 12,
              }
            }
          >
            W2 5TY, UK
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#e6ebee",
              "borderBottomRightRadius": 0,
              "borderTopRightRadius": 0,
              "display": "flex",
              "flexDirection": "column",
              "overflow": "hidden",
              "padding": 16,
              "width": 80,
              "zIndex": 2,
            }
          }
        >
          <Text>
            140m
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "borderBottomColor": "#b8bfc4",
            "borderBottomWidth": 0,
            "display": "flex",
            "flexDirection": "row",
            "height": 70,
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "padding": 16,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 18,
                "fontWeight": "700",
              }
            }
          >
             
            3
            /
            10
             
          </Text>
          <Text>
             Available 
          </Text>
        </View>
        <View
          style={
            {
              "display": "flex",
              "flexDirection": "column",
              "flexGrow": 1,
              "padding": 16,
            }
          }
        >
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "row",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#383d3f",
                  "fontSize": 12,
                }
              }
            >
              London 2
               
            </Text>
          </View>
          <Text
            style={
              {
                "color": "#383d3f",
                "fontSize": 12,
              }
            }
          >
            W2 5TY, UK
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "backgroundColor": "#e6ebee",
              "borderBottomRightRadius": 10,
              "borderTopRightRadius": 0,
              "display": "flex",
              "flexDirection": "column",
              "overflow": "hidden",
              "padding": 16,
              "width": 80,
              "zIndex": 2,
            }
          }
        >
          <Text>
            12km
          </Text>
        </View>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#002899",
          "borderRadius": 20,
          "borderWidth": 1,
          "paddingVertical": 8,
        }
      }
      testID="show"
    >
      <Text
        style={
          {
            "textAlign": "center",
          }
        }
      >
        Show all
      </Text>
    </View>
  </View>
</RCTScrollView>
`;
